--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -195,6 +195,8 @@ jobs:
             # 删除指定域名
             sed -i -e '/DOMAIN,this_ruleset_is_made_by_sukkaw.ruleset.skk.moe/d' "$file"
             sed -i -e 's/,reject$//' "$file"
+            # 修正格式
+            sed -i 's/, */,/g' "$file"
           else
             echo "$file not found."
           fi
