--- a/Stash/Config/Evolve.yaml
+++ b/Stash/Config/Evolve.yaml
@@ -262,6 +262,8 @@ proxy-groups:
     proxies:
       - All-Auto
     filter: ^(?=.*(.))(?!.*((?i)群|邀请|返利|循环|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|过期|已用|联系|邮箱|工单|贩卖|通知|倒卖|防止|国内|地址|频道|无法|说明|使用|提示|特别|访问|支持|教程|关注|更新|作者|加入|(\b(USE|USED|TOTAL|Traffic|Expire|EMAIL|Panel|Channel|Author)\b|(\d{4}-\d{2}-\d{2}|\d+G)))).*$
+    use:
+      - Subscribe
   - name: HK-Auto
     type: url-test
     hidden: true
