--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -145,7 +145,7 @@ jobs:
                 # 国内规则
                 "NetEaseMusic.list https://raw.githubusercontent.com/LM-Firefly/Rules/master/Domestic-Services/NeteaseMusic.list"
                 "bilibili.list https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list"
-                "WeChat.list https://raw.githubusercontent.com/NobyDa/Script/master/Surge/WeChat.list"
+                "WeChat.list https://ruleset.isagood.day/wechat.conf"
                 "ChinaASN.list https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list"
                 "ChinaDomain.list https://ruleset.skk.moe/List/non_ip/domestic.conf"
                 "ChinaIP.list https://raw.githubusercontent.com/Loyalsoldier/surge-rules/release/ruleset/cncidr.txt"
