--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Coldvvater_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2025.03.15
+# > Update Date: 2025.03.26
 
 [General]
 # > 日志等级
@@ -10,7 +10,7 @@ loglevel = notify
 # > Internet 测试 URL
 internet-test-url = http://connectivitycheck.platform.hicloud.com/generate_204
 # > 代理测速 URL
-proxy-test-url = http://cp.cloudflare.com
+proxy-test-url = https://www.gstatic.com/generate_204
 # > 测试超时（秒）
 test-timeout = 5
 
