--- a/Stash/Config/Evolve.yaml
+++ b/Stash/Config/Evolve.yaml
@@ -23,7 +23,7 @@ proxy-providers:
   Subscribe:
     url: http://your-service-provider # 用你的订阅链接替换
     interval: 86400
-    benchmark-url: https://www.gstatic.com/generate_204
+    benchmark-url: http://www.gstatic.com/generate_204
     benchmark-timeout: 5
     # 功能分组
 proxy-groups:
