--- a/Surge/Config/Evolve.conf
+++ b/Surge/Config/Evolve.conf
@@ -10,7 +10,7 @@ loglevel = notify
 # > Internet 测试 URL
 internet-test-url = http://connectivitycheck.platform.hicloud.com/generate_204
 # > 代理测速 URL
-proxy-test-url = https://www.gstatic.com/generate_204
+proxy-test-url = http://www.gstatic.com/generate_204
 # > 测试超时（秒）
 test-timeout = 5
 
@@ -137,7 +137,7 @@ bilibili = select, DIRECT, HongKong, TaiWan, no-alert=0, hidden=0, icon-url=http
 Spotify = select, Proxy, HongKong, TaiWan, Japan, Singapore, America, AllServer, DIRECT, no-alert=0, hidden=0, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Spotify.png, include-all-proxies=0
 
 # > 网易云音乐
-NetEaseMusic = select, DIRECT, no-alert=0, hidden=0, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netease_Music.pn
+NetEaseMusic = select, DIRECT, no-alert=0, hidden=0, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netease_Music.png
 
 # > 国际流媒体
 Streaming = select, Proxy, HongKong, TaiWan, Japan, Singapore, America, AllServer, no-alert=0, hidden=0, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming.png, include-all-proxies=0
