--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -217,6 +217,8 @@ jobs:
             sed -i -e '/^\s*[#;]/d' -e '/^$/d' -e 's| //.*||'  "$file"
             # 删除指定域名
             sed -i -e '/DOMAIN,this_ruleset_is_made_by_sukkaw.ruleset.skk.moe/d' "$file"
+            sed -i -e '/DOMAIN,th1s_rule5et_1s_m4d3_by_5ukk4w_ruleset.skk.moe/d' "$file"
+            sed -i -e '/DOMAIN,this_rule_set_is_made_by_sukkaw.skk.moe/d' "$file"
             sed -i -e 's/,reject$//' "$file"
             # 修正格式
             sed -i 's/, */,/g' "$file"
