--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -115,7 +115,7 @@ jobs:
             # 下载规则
             files=(
                 # 苹果
-                "APNs.list https://kelee.one/Tool/Loon/Rule/ApplePushNotificationService.list"
+                "APNs.list https://kelee.one/Tool/Loon/Lsr/ApplePushNotificationService.lsr"
                 "Apple.list https://raw.githubusercontent.com/NobyDa/Script/master/Surge/Apple.list"
                 "AppleProxyService.list https://raw.githubusercontent.com/Coldvvater/Mononoke/master/Surge/Custom/AppleProxyService.list"
                 "AppleMusic.list https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/AppleMusic/AppleMusic.list"
@@ -142,7 +142,7 @@ jobs:
                 # 甲骨文
                 "Oracle.list https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Oracle/Oracle.list"
                 # 流媒体
-                "TikTok.list https://kelee.one/Tool/Loon/Rule/TikTok.list"
+                "TikTok.list https://kelee.one/Tool/Loon/Lsr/TikTok.lsr"
                 "Netflix.list https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list"
                 "HBO.list https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBO/HBO.list"
                 "Disney.list https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list"
@@ -162,8 +162,8 @@ jobs:
                 "Epic.list https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Epic/Epic.list"
                 "Game.list https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Game/Game.list"
                 # 下载CDN
-                "DownloadCDN_Global.list https://kelee.one/Tool/Loon/Rule/InternationalDownloadCDN.list"
-                "DownloadCDN_CN.list https://kelee.one/Tool/Loon/Rule/ChinaDownloadCDN.list"
+                "DownloadCDN_Global.list https://kelee.one/Tool/Loon/Lsr/InternationalDownloadCDN.lsr"
+                "DownloadCDN_CN.list https://kelee.one/Tool/Loon/Lsr/ChinaDownloadCDN.lsr"
                 # 国内规则
                 "NetEaseMusic.list https://raw.githubusercontent.com/LM-Firefly/Rules/master/Domestic-Services/NeteaseMusic.list"
                 "bilibili.list https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list"
