--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -43,7 +43,7 @@ jobs:
             > Mononoke-repo/Ruleset/Reject.list
             for url in "${urls[@]}"; do
                 echo "Downloading: $url"
-                curl -f -L -H "Accept-Language: en-us" "$url" >> Mononoke-repo/Ruleset/Reject.list || { echo "Download Failed: $url"; exit 1; }
+                curl -f -L "$url" >> Mononoke-repo/Ruleset/Reject.list || { echo "Download Failed: $url"; exit 1; }
                 echo "" >> Mononoke-repo/Ruleset/Reject.list
             done
             # 合并 SukkaW 广告规则
@@ -54,7 +54,7 @@ jobs:
             > Mononoke-repo/Ruleset/Ads_SukkaW.list
             for url in "${urls[@]}"; do
                 echo "Downloading: $url"
-                curl -f -L -H "Accept-Language: en-us" "$url" >> Mononoke-repo/Ruleset/Ads_SukkaW.list || { echo "Download Failed: $url"; exit 1; }
+                curl -f -L "$url" >> Mononoke-repo/Ruleset/Ads_SukkaW.list || { echo "Download Failed: $url"; exit 1; }
                 echo "" >> Mononoke-repo/Ruleset/Ads_SukkaW.list
             done
             # 合并 SukkaW CDN 规则
@@ -65,7 +65,7 @@ jobs:
             > Mononoke-repo/Ruleset/CDN.list
             for url in "${urls[@]}"; do
                 echo "Downloading: $url"
-                curl -f -L -H "Accept-Language: en-us" "$url" >> Mononoke-repo/Ruleset/CDN.list || { echo "Download Failed: $url"; exit 1; }
+                curl -f -L "$url" >> Mononoke-repo/Ruleset/CDN.list || { echo "Download Failed: $url"; exit 1; }
                 echo "" >> Mononoke-repo/Ruleset/CDN.list
             done
             # 合并 GFW 规则
@@ -76,7 +76,7 @@ jobs:
             > Mononoke-repo/Ruleset/ProxyGFW.list
             for url in "${urls[@]}"; do
                 echo "Downloading: $url"
-                curl -f -L -H "Accept-Language: en-us" "$url" >> Mononoke-repo/Ruleset/ProxyGFW.list || { echo "Download Failed: $url"; exit 1; }
+                curl -f -L "$url" >> Mononoke-repo/Ruleset/ProxyGFW.list || { echo "Download Failed: $url"; exit 1; }
                 echo "" >> Mononoke-repo/Ruleset/ProxyGFW.list
             done
             # 合并 AI 规则
@@ -88,7 +88,7 @@ jobs:
             > Mononoke-repo/Ruleset/AI.list
             for url in "${urls[@]}"; do
                 echo "Downloading: $url"
-                curl -f -L -H "Accept-Language: en-us" "$url" >> Mononoke-repo/Ruleset/AI.list || { echo "Download Failed: $url"; exit 1; }
+                curl -f -L "$url" >> Mononoke-repo/Ruleset/AI.list || { echo "Download Failed: $url"; exit 1; }
                 echo "" >> Mononoke-repo/Ruleset/AI.list
             done
             # 合并 AppleProxy 规则
@@ -98,7 +98,7 @@ jobs:
             > Mononoke-repo/Ruleset/AppleProxy.list
             for url in "${urls[@]}"; do
                 echo "Downloading: $url"
-                curl -f -L -H "Accept-Language: en-us" "$url" >> Mononoke-repo/Ruleset/AppleProxy.list || { echo "Download Failed: $url"; exit 1; }
+                curl -f -L "$url" >> Mononoke-repo/Ruleset/AppleProxy.list || { echo "Download Failed: $url"; exit 1; }
                 echo "" >> Mononoke-repo/Ruleset/AppleProxy.list
             done
             # 合并 AppleCN 规则
@@ -109,13 +109,13 @@ jobs:
             > Mononoke-repo/Ruleset/AppleCN.list
             for url in "${urls[@]}"; do
                 echo "Downloading: $url"
-                curl -f -L -H "Accept-Language: en-us" "$url" >> Mononoke-repo/Ruleset/AppleCN.list || { echo "Download Failed: $url"; exit 1; }
+                curl -f -L "$url" >> Mononoke-repo/Ruleset/AppleCN.list || { echo "Download Failed: $url"; exit 1; }
                 echo "" >> Mononoke-repo/Ruleset/AppleCN.list
             done            
             # 下载规则
             files=(
                 # 苹果
-                "APNs.list https://kelee.one/Tool/Loon/Lsr/ApplePushNotificationService.lsr"
+                "APNs.list https://git.repcz.link/kelee.one/Tool/Loon/Lsr/ApplePushNotificationService.lsr"
                 "Apple.list https://raw.githubusercontent.com/NobyDa/Script/master/Surge/Apple.list"
                 "AppleProxyService.list https://raw.githubusercontent.com/Coldvvater/Mononoke/master/Surge/Custom/AppleProxyService.list"
                 "AppleMusic.list https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/AppleMusic/AppleMusic.list"
@@ -142,7 +142,7 @@ jobs:
                 # 甲骨文
                 "Oracle.list https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Oracle/Oracle.list"
                 # 流媒体
-                "TikTok.list https://kelee.one/Tool/Loon/Lsr/TikTok.lsr"
+                "TikTok.list https://git.repcz.link/kelee.one/Tool/Loon/Lsr/TikTok.lsr"
                 "Netflix.list https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list"
                 "HBO.list https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBO/HBO.list"
                 "Disney.list https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list"
@@ -162,8 +162,8 @@ jobs:
                 "Epic.list https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Epic/Epic.list"
                 "Game.list https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Game/Game.list"
                 # 下载CDN
-                "DownloadCDN_Global.list https://kelee.one/Tool/Loon/Lsr/InternationalDownloadCDN.lsr"
-                "DownloadCDN_CN.list https://kelee.one/Tool/Loon/Lsr/ChinaDownloadCDN.lsr"
+                "DownloadCDN_Global.list https://git.repcz.link/kelee.one/Tool/Loon/Lsr/InternationalDownloadCDN.lsr"
+                "DownloadCDN_CN.list https://git.repcz.link/kelee.one/Tool/Loon/Lsr/ChinaDownloadCDN.lsr"
                 # 国内规则
                 "NetEaseMusic.list https://raw.githubusercontent.com/LM-Firefly/Rules/master/Domestic-Services/NeteaseMusic.list"
                 "bilibili.list https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list"
@@ -197,7 +197,7 @@ jobs:
             for file in "${files[@]}"; do
                 set -- $file
                 echo "Downloading: $2"
-                curl -A "Surge iOS/3367" -H "Accept-Language: en-us" -f -L -o "Mononoke-repo/Ruleset/$1" "$2" || { echo "Download Failed: $2"; exit 1; }
+                curl -A "Surge iOS/9527" -H "Accept: */*" -f -L -o "Mononoke-repo/Ruleset/$1" "$2" || { echo "Download Failed: $2"; exit 1; }
             done
             echo "Files downloaded successfully."
         else
